--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -30,8 +30,8 @@ RM := -rm -rf
 all : $(SYSTEM)
 	objcopy -I elf64-x86-64 -S -R ".eh_frame" -R ".comment" -O binary $(SYSTEM) $(TARGET)
 
-$(SYSTEM):	$(HEAD_TARGET) $(MAIN_TARGET) $(PRINTK_TARGET) $(TRAP_TARGET)
-	ld -b elf64-x86-64 -z muldefs -o $(SYSTEM) $(HEAD_TARGET) $(MAIN_TARGET) $(PRINTK_TARGET) -T Kernel.lds 
+$(SYSTEM):	$(HEAD_TARGET) $(ENTRY_TARGET) $(MAIN_TARGET) $(PRINTK_TARGET) $(TRAP_TARGET)
+	ld -b elf64-x86-64 -z muldefs -o $(SYSTEM) $(HEAD_TARGET) $(ENTRY_TARGET) $(MAIN_TARGET) $(PRINTK_TARGET) $(TRAP_TARGET) -T Kernel.lds 
 
 $(HEAD_TARGET): $(HEAD)
 	gcc -E $(HEAD) > $(HEAD_TEMP)
@@ -41,10 +41,10 @@ $(ENTRY_TARGET): $(ENTRY)
 	gcc -E  $(ENTRY) > $(ENTRY_TEMP)
 	as --64 -o $(ENTRY_TARGET) $(ENTRY_TEMP)
 
-$(MAIN_TARGET): $(MAIN) $(LIB)
+$(MAIN_TARGET): $(MAIN)
 	gcc -static  -mcmodel=large -fno-builtin -m64 -c $(MAIN)  -fno-stack-protector
 
-$(PRINTK_TARGET) : $(PRINTK) $(LIB)
+$(PRINTK_TARGET) : $(PRINTK)
 	gcc -static  -mcmodel=large -fno-builtin -m64 -c $(PRINTK) -fno-stack-protector
 
 $(TRAP_TARGET) : $(TRAP)
