内存信息查询

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -18,6 +18,9 @@ MAIN_TARGET := main.o
 TRAP := trap.c
 TRAP_TARGET := trap.o
 
+MEMORY := memory.c
+MEMROY_TARGET := memory.o
+
 LIB := lib.h
 
 SYSTEM := system
@@ -30,8 +33,8 @@ RM := -rm -rf
 all : $(SYSTEM)
 	objcopy -I elf64-x86-64 -S -R ".eh_frame" -R ".comment" -O binary $(SYSTEM) $(TARGET)
 
-$(SYSTEM):	$(HEAD_TARGET) $(ENTRY_TARGET) $(MAIN_TARGET) $(PRINTK_TARGET) $(TRAP_TARGET)
-	ld -b elf64-x86-64 -z muldefs -o $(SYSTEM) $(HEAD_TARGET) $(ENTRY_TARGET) $(MAIN_TARGET) $(PRINTK_TARGET) $(TRAP_TARGET) -T Kernel.lds 
+$(SYSTEM):	$(HEAD_TARGET) $(ENTRY_TARGET) $(MAIN_TARGET) $(PRINTK_TARGET) $(TRAP_TARGET) $(MEMROY_TARGET)
+	ld -b elf64-x86-64 -z muldefs -o $(SYSTEM) $(HEAD_TARGET) $(ENTRY_TARGET) $(MAIN_TARGET) $(PRINTK_TARGET) $(TRAP_TARGET) $(MEMROY_TARGET) -T Kernel.lds 
 
 $(HEAD_TARGET): $(HEAD)
 	gcc -E $(HEAD) > $(HEAD_TEMP)
@@ -42,13 +45,16 @@ $(ENTRY_TARGET): $(ENTRY)
 	as --64 -o $(ENTRY_TARGET) $(ENTRY_TEMP)
 
 $(MAIN_TARGET): $(MAIN)
-	gcc -static  -mcmodel=large -fno-builtin -m64 -c $(MAIN)  -fno-stack-protector
+	gcc -mcmodel=large -fno-builtin -m64 -c $(MAIN)
 
 $(PRINTK_TARGET) : $(PRINTK)
-	gcc -static  -mcmodel=large -fno-builtin -m64 -c $(PRINTK) -fno-stack-protector
+	gcc -mcmodel=large -fno-builtin -m64 -c $(PRINTK)
 
 $(TRAP_TARGET) : $(TRAP)
-	gcc  -mcmodel=large -fno-builtin -m64 -c $(TRAP)
+	gcc -mcmodel=large -fno-builtin -m64 -c $(TRAP)
+
+$(MEMROY_TARGET) : $(MEMORY)
+	gcc -mcmodel=large -fno-builtin -m64 -c $(MEMORY)
 
 clean:
 	$(RM) *.o $(ENTRY_TEMP) $(HEAD_TEMP) $(TARGET) $(SYSTEM)
